--- a/login-popup.html
+++ b/login-popup.html
@@ -49,10 +49,15 @@
             </div>
             <div class="col-xs-12 col-sm-8">
               <div class="login-details">
-                
+                <div class="close">
+
+                  	<button type="button" class="close get_link_close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+
+                  </div>
                   <div class="logo-div">
                     <img src="https://s16.postimg.org/5hwertudx/group_9.png" class="logo">
                   </div>
+                  
                <div class="get-link-div" id="get-link">
 	                <div class="get-link-text-header">
 	                  <p class="get-link">Get the link to download app via SMS</p>
@@ -72,10 +77,10 @@
 	                      <p class="download-text">Download Via</p>
 	                      <div class="store-links-footer">
 	                        <div class="play-store">
-	                          <a href=""><img src="https://s11.postimg.org/vute9sen7/android.png" class="android"></a>
+	                          <a href=""><img src="https://s18.postimg.org/3s42ryre1/playstore.png" class="android"></a>
 	                        </div>
 	                        <div class="app-store">
-	                          <a href=""><img src="https://s16.postimg.org/y7frbrnp1/apple.png" class="ios"></a>
+	                          <a href=""><img src="https://s18.postimg.org/6wffhqna1/appstore.png" class="ios"></a>
 	                        </div>
 	                      </div>
 	                    </div>
@@ -229,14 +234,17 @@ function callmodal() {
 
 	.store-links-footer{
 		display: flex;
-		margin-top: -16px;
+		margin-top: 15px;
+    	margin-bottom: 25px;
 	}
 	.android{
-		width: 132.6px;
+		width: 100px;
+		margin-right: 15px;
  
 	}
 	.ios{
-		width: 132.6px;
+		width: 100px;
+		margin-left: 0;
  
 	}
 	.play-store{
@@ -245,7 +253,7 @@ function callmodal() {
 	}
 	.app-store{
 		margin: auto;
-		margin-left: -40px;
+		margin-left:0px;
 	}
 	.thank-you-text{
 		font-family: Open Sans;
@@ -277,6 +285,15 @@ function callmodal() {
 	}
 	.thanks-msg-image img{
 		margin-top: -40px;
+	}
+	.close .get_link_close{
+		margin-right: 10px;
+		margin-top: 10px;
+		color: #444444;
+		opacity: 0.9;
+	}
+	.close{
+		opacity: 1;
 	}
 
 
