or  image added

--- a/login-popup.html
+++ b/login-popup.html
@@ -73,7 +73,7 @@
 	                  </div>
 	                  
 	                    <div class="footer-links">
-	                      <p class="or-text">OR</p>
+	                     <img src="https://s12.postimg.org/nkis299q5/image.png">
 	                      <p class="download-text">Download Via</p>
 	                      <div class="store-links-footer">
 	                        <div class="play-store">
@@ -209,6 +209,10 @@ function callmodal() {
   background-color: #00c4aa;
   border: none;
   } 
+  .footer-links{
+  	margin: auto;
+  	text-align: center;
+  }
 	.or-text{
 		font-family: Open Sans;
 	  font-size: 14px;
